# hdmi-cec-ctrl

./: Cargo.toml  README.md  memory.x
.cargo/: config.toml
src/: logger.rs  main.rs
