[package]
name = "hdmi-cec-ctrl"
version = "0.1.0"
edition = "2021"
authors = ["Alex Martens <alexmgit@protonmail.com>"]
license = "MIT"

[dependencies]
rtt-target = { version = "0.3", features = ["cortex-m"] }
log = "0.4"
cortex-m = "0.7"
cortex-m-rt = "0.7"
cortex-m-rtic = "0.6.0-rc.4"
embedded-hal = "0.2"
atomic-polyfill = "0.1"
panic-probe = { version = "0.3", features = ["print-rtt" ] }

[dependencies.newam-mqtt]
git = "https://github.com/newAM/newam-mqtt.git"
rev = "9b2dfef39713bd39688bb91940839a3c84e5ab0d"

[dependencies.stm32h7xx-hal]
git = "https://github.com/stm32-rs/stm32h7xx-hal.git"
rev = "bba94e7b572df5858d453031347f51fdea7c2d86"
features = ["stm32h743", "rt", "ethernet"]

[dependencies.stm32-cec]
git = "https://github.com/newAM/stm32-cec.git"
rev = "652327044fa27c6d34e65b7137625cf5db20a11a"

[dependencies.smoltcp]
version = "0.8"
default-features = false
features = [
    "log",
    "medium-ethernet",
    "proto-dhcpv4",
    "proto-ipv4",
    "socket-dhcpv4",
    "socket-raw",
    "socket-tcp",
    # "verbose",
]

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = true
lto = false
opt-level = 3
overflow-checks = true

[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = true
lto = false
opt-level = 3
overflow-checks = true

[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = false
opt-level = 3
overflow-checks = false

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
lto = false
opt-level = 3 
overflow-checks = true
