[package]
name = "hdmi-cec-ctrl"
version = "0.1.0"
edition = "2021"
authors = ["Alex Martens <alex@thinglab.org>"]
license = "MIT"

[dependencies]
rtt-target = { version = "0.3", features = ["cortex-m"] }
log = "0.4"
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = "0.2"
panic-probe = { version = "0.3", features = ["print-rtt" ] }
usb-device = "0.2.5"
usbd-serial = "0.1.0"

[dependencies.stm32h7xx-hal]
version = "0.11.0"
features = ["stm32h743v", "rt", "usb_hs"]

[dependencies.stm32-cec]
git = "https://github.com/newAM/stm32-cec.git"
rev = "652327044fa27c6d34e65b7137625cf5db20a11a"

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = true
lto = false
opt-level = 3
overflow-checks = true

[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = true
lto = false
opt-level = 3
overflow-checks = true

[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = false
opt-level = 3
overflow-checks = false

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
lto = false
opt-level = 3 
overflow-checks = true
